--- a/views/index.html
+++ b/views/index.html
@@ -1,81 +1,1 @@
-
-<html ng-app="simpleShare">
-  <head>
-    <script src="/bower_components/angular/angular.js"></script>
-    <script src="/bower_components/angular-route/angular-route.js"></script>
-    <script src="/bower_components/angular-resource/angular-resource.js"></script>
-    <script src="/bower_components/ng-file-upload/ng-file-upload-shim.js"></script>
-    <script src="/bower_components/ng-file-upload/ng-file-upload-shim.js"></script>
-    <script src="/bower_components/ng-file-upload/ng-file-upload.js"></script>
-    <link rel="stylesheet" href="/bower_components/pure/pure.css"/>
-    <link rel="stylesheet" href="/bower_components/pure/grids-responsive.css"/>
-    <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css"/>
-    <script src="/static/js/app.js"></script>
-    <base href="/"/>
-  </head>
-  <body ng-controller="MainController">
-    <div class="pure-g">
-      <div ng-show="api != 'shared'" class="pure-u-md-1-6">
-        <ng-include src="'navbar.html'"></ng-include>
-      </div>
-      <div class="pure-u-md-5-6">
-        <ng-view>Loading ...</ng-view>
-      </div>
-    </div>
-    <script type="text/ng-template" id="navbar.html">
-      <nav class="pure-menu"><span class="pure-menu-heading">Simple Share</span>
-        <ul class="pure-menu-list">
-          <li style="height: inherit;" class="pure-menu-item"><a href="/files" ng-class="selected('/files')" class="pure-menu-link">Files</a></li>
-          <li style="height: inherit;" class="pure-menu-item"><a href="/" ng-class="selected('/')" class="pure-menu-link">Home</a></li>
-        </ul>
-      </nav>
-    </script>
-    <script type="text/ng-template" id="home.html"></script>
-    <script type="text/ng-template" id="files.html">
-      <div id="content">[[files]]
-        <div id="create-folders">
-          <input ng-model="new_folder"/>
-          <input type="submit" ng-click="create_folder()"/>
-        </div>
-        <div id="upload-files">
-          <div ngf-select="ngf-select" ng-model="upload_files" ngf-multiple="true" class="button">Upload on file change</div>[[upload_files]]
-          <ul ng-show="upload_files.length &gt;0">
-            <li ng-repeat="u_file in upload_files">[[u_file.up_progress]] [[u_file.name]] </li>
-          </ul>
-        </div>
-        <div id="files-list">
-          <table class="pure-table pure-table-horizontal">
-            <thead>
-              <tr>
-                <td ng-click="select_all();" ng-class="['fa', 'fa-square-o']"></td>
-                <th ng-click="toggle_sort_by('name');">name</th>
-                <th ng-click="toggle_sort_by('size');">size</th>
-                <th ng-click="toggle_sort_by('date');">modified</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr ng-show="$location.path() != '/files'">
-                <td></td>
-                <td><a ng-href="[[get_path('..')]]"><i class="fa fa-folder-o"></i>..</a></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr ng-repeat="dir in files.dirs track by $index">
-                <td ng-click="select($index);" ng-class="['fa', 'fa-square-o']"></td>
-                <td><a ng-href="[[get_path(dir)]]"><i class="fa fa-folder-o"></i>[[dir]]</a><a ng-if="api == 'files'" href="" ng-click="delete_path(dir)"><i class="fa fa-trash-o"></i></a><a ng-if="api == 'files'" href="" ng-click="share_path(dir)"><i class="fa fa-share-alt"></i>[[shared[dir]; ]]</a></td>
-                <td>X kB</td>
-                <td>someday</td>
-              </tr>
-              <tr ng-repeat="file in files.files track by $index">
-                <td ng-click="select($index);" ng-class="['fa', 'fa-square-o']"></td>
-                <td><a ng-href="/get[[get_path(file)]]" target="_self"><i class="fa fa-file-o"></i>[[file]]</a><a ng-if="api == 'files'" href="" ng-click="delete_path(file)"><i class="fa fa-trash-o"></i></a><a ng-if="api == 'files'" href="" ng-click="share_path(file)"><i class="fa fa-share-alt"></i>[[shared[file]; ]]</a></td>
-                <td>X kB</td>
-                <td>someday</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </script>
-  </body>
-</html>
+<html ng-app="simpleShare"><head><script src="/bower_components/angular/angular.min.js"></script><script src="/bower_components/angular-route/angular-route.min.js"></script><script src="/bower_components/angular-resource/angular-resource.min.js"></script><script src="/bower_components/ng-file-upload/ng-file-upload-shim.min.js"></script><script src="/bower_components/ng-file-upload/ng-file-upload.min.js"></script><script src="/bower_components/less/dist/less.min.js"></script><link rel="stylesheet" href="/bower_components/pure/pure-min.css"/><link rel="stylesheet" href="/bower_components/pure/grids-responsive-min.css"/><link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css"/><link rel="stylesheet" href="/static/css/simpleshare.less"/><script src="/static/js/app.js"></script><base href="/"/></head><body ng-controller="MainController"><div class="pure-g"><div class="pure-u-1 pure-u-md-1-6"><ng-include src="'navbar.html'"></ng-include></div><div class="pure-u-1 pure-u-md-5-6"><ng-view>Loading ...</ng-view></div></div><script type="text/ng-template" id="navbar.html"><nav class="pure-menu"><span class="pure-menu-heading">Simple Share</span><ul class="pure-menu-list"><li ng-show="api.api != 'shared'" style="height: inherit;" class="pure-menu-item"><a ng-href="/files" ng-class="selected('/files')" class="pure-menu-link">Files</a></li><li style="height: inherit;" class="pure-menu-item"><a href="/" ng-class="selected('/')" class="pure-menu-link">Home</a></li></ul></nav></script><script type="text/ng-template" id="home.html"></script><script type="text/ng-template" id="files.html"><div id="content"><div id="actions" ng-show="api.api != 'shared'"><div class="pure-g"><div id="create-folders" class="pure-form pure-u-1 pure-u-md-1-3"><input ng-model="new_folder"/><button type="submit" ng-click="create_folder()" class="pure-button pure-button-primary">Create folder</button></div><div id="upload-files" class="pure-u-1 pure-u-md-1-3"><div ngf-select="ngf-select" ng-model="upload_files" ngf-multiple="true" class="pure-button pure-button-primary"><i class="fa fa-upload"></i>Upload</div></div></div><div class="pure-u-1"><ul ng-show="upload_files.length &gt;0"><li ng-repeat="u_file in upload_files">[[u_file.up_progress]] [[u_file.name]] </li></ul></div></div><div id="files-list"><table class="pure-table pure-table-horizontal"><thead><tr><th ng-click="select_all();" ng-class="['fa', 'fa-square-o']"></th><th ng-click="toggle_sort_by('name');">name</th><th ng-click="toggle_sort_by('size');">size</th><th ng-click="toggle_sort_by('date');">modified</th></tr></thead><tbody><tr ng-show="$location.path() != '/files'"><td></td><td><a ng-href="[[get_path('..')]]"><i class="fa fa-folder-o"></i>..</a></td><td></td><td></td></tr><tr ng-repeat="dir in files.dirs track by $index"><td><a ng-click="select($index);" ng-class="['fa', 'fa-square-o']"></a></td><td><a ng-href="[[get_path(dir)]]"><i class="fa fa-folder-o"></i>[[dir]]</a><a ng-if="api.api == 'files'" href="" ng-click="delete_path(dir)"><i class="fa fa-trash-o"></i></a><a ng-if="api.api == 'files'" href="" ng-click="share_path(dir)"><i class="fa fa-share-alt"></i>[[shared[dir]; ]]</a></td><td>X kB</td><td>someday</td></tr><tr ng-repeat="file in files.files track by $index"><td><a ng-click="select($index);" ng-class="['fa', 'fa-square-o']"></a></td><td><a ng-href="/get[[get_path(file)]]" target="_self"><i class="fa fa-file-o"></i>[[file]]</a><a ng-if="api.api == 'files'" href="" ng-click="delete_path(file)"><i class="fa fa-trash-o"></i></a><a ng-if="api.api == 'files'" href="" ng-click="share_path(file)"><i class="fa fa-share-alt"></i>[[shared[file]; ]]</a></td><td>X kB</td><td>someday</td></tr></tbody></table></div></div></script></body></html>
