--- a/views/index.jade
+++ b/views/index.jade
@@ -1,56 +1,60 @@
 html(ng-app="simpleShare")
   head
     //- include angularjs
-    script(src='/bower_components/angular/angular.js')
-    script(src='/bower_components/angular-route/angular-route.js')
-    script(src='/bower_components/angular-resource/angular-resource.js')
-    script(src="/bower_components/ng-file-upload/ng-file-upload-shim.js")
+    script(src='/bower_components/angular/angular.min.js')
+    script(src='/bower_components/angular-route/angular-route.min.js')
+    script(src='/bower_components/angular-resource/angular-resource.min.js')
     //- script(src="/bower_components/es5-shim/es5-shim.min.js")
-    //- script(src="/bower_components/es5-shim/es5-sham.min.js")
-    script(src="/bower_components/ng-file-upload/ng-file-upload-shim.js")
-    script(src="/bower_components/ng-file-upload/ng-file-upload.js")
-    link(rel="stylesheet", href="/bower_components/pure/pure.css")
-    link(rel="stylesheet", href="/bower_components/pure/grids-responsive.css")
-    link(rel="stylesheet", href="/bower_components/font-awesome/css/font-awesome.css")
+    script(src="/bower_components/ng-file-upload/ng-file-upload-shim.min.js")
+    script(src="/bower_components/ng-file-upload/ng-file-upload.min.js")
+    script(src="/bower_components/less/dist/less.min.js")
+    link(rel="stylesheet", href="/bower_components/pure/pure-min.css")
+    link(rel="stylesheet", href="/bower_components/pure/grids-responsive-min.css")
+    link(rel="stylesheet", href="/bower_components/font-awesome/css/font-awesome.min.css")
+    link(rel="stylesheet", href="/static/css/simpleshare.less")
 
     script(src='/static/js/app.js')
     base(href="/")
   body(ng-controller="MainController")
     div.pure-g
-      div.pure-u-md-1-6(ng-show="api != 'shared'")
+      div.pure-u-1.pure-u-md-1-6
         ng-include(src="'navbar.html'")
-      div.pure-u-md-5-6
+      div.pure-u-1.pure-u-md-5-6
         ng-view
           | Loading ...
     script(type='text/ng-template', id='navbar.html')
       nav.pure-menu
         span.pure-menu-heading Simple Share
         ul.pure-menu-list
-          li.pure-menu-item(style="height: inherit;")
-            a.pure-menu-link(href="/files", ng-class="selected('/files')") Files
+          li.pure-menu-item(ng-show="api.api != 'shared'",style="height: inherit;")
+            a.pure-menu-link(ng-href="/files", ng-class="selected('/files')") Files
           li.pure-menu-item(style="height: inherit;")
             a.pure-menu-link(href="/", ng-class="selected('/')") Home
     script(type='text/ng-template', id='home.html')
     script(type='text/ng-template', id='files.html')
       div#content
         //- base(href="/files")
-        | [[files]]
-        div#create-folders
-          input(ng-model='new_folder')
-          input(type='submit', ng-click="create_folder()")
-        div#upload-files
-          div(class="button",
-              ngf-select,
-              ng-model="upload_files",
-              ngf-multiple="true") Upload on file change
-          | [[upload_files]]
-          ul(ng-show="upload_files.length >0")
-            li(ng-repeat="u_file in upload_files") [[u_file.up_progress]] [[u_file.name]] 
+        div#actions(ng-show="api.api != 'shared'")
+          div.pure-g
+            div#create-folders.pure-form.pure-u-1.pure-u-md-1-3
+              input(ng-model='new_folder')
+              button.pure-button.pure-button-primary(type='submit', ng-click="create_folder()")
+                | Create folder
+            div#upload-files.pure-u-1.pure-u-md-1-3
+              div.pure-button.pure-button-primary(
+                  ngf-select,
+                  ng-model="upload_files",
+                  ngf-multiple="true")
+                  i.fa.fa-upload
+                  | Upload
+          div.pure-u-1
+              ul(ng-show="upload_files.length >0")
+                li(ng-repeat="u_file in upload_files") [[u_file.up_progress]] [[u_file.name]] 
         div#files-list
           table.pure-table.pure-table-horizontal
             thead
               tr
-                td(ng-click="select_all();", ng-class="['fa', 'fa-square-o']")
+                th(ng-click="select_all();", ng-class="['fa', 'fa-square-o']")
                 th(ng-click="toggle_sort_by('name');") name
                 th(ng-click="toggle_sort_by('size');") size
                 th(ng-click="toggle_sort_by('date');") modified
@@ -64,27 +68,29 @@ html(ng-app="simpleShare")
                 td
                 td
               tr(ng-repeat="dir in files.dirs track by $index")
-                td(ng-click="select($index);", ng-class="['fa', 'fa-square-o']")
+                td
+                  a(ng-click="select($index);", ng-class="['fa', 'fa-square-o']")
                 td
                   a(ng-href="[[get_path(dir)]]")
                     i.fa.fa-folder-o
                     | [[dir]]
-                  a(ng-if="api == 'files'", href="", ng-click="delete_path(dir)")
+                  a(ng-if="api.api == 'files'", href="", ng-click="delete_path(dir)")
                     i.fa.fa-trash-o
-                  a(ng-if="api == 'files'", href="", ng-click="share_path(dir)")
+                  a(ng-if="api.api == 'files'", href="", ng-click="share_path(dir)")
                     i.fa.fa-share-alt
                     | [[shared[dir]; ]]
                 td X kB
                 td someday
               tr(ng-repeat="file in files.files track by $index")
-                td(ng-click="select($index);", ng-class="['fa', 'fa-square-o']")
+                td
+                  a(ng-click="select($index);", ng-class="['fa', 'fa-square-o']")
                 td
                   a(ng-href="/get[[get_path(file)]]", target="_self")
                     i.fa.fa-file-o
                     | [[file]]
-                  a(ng-if="api == 'files'", href="", ng-click="delete_path(file)")
+                  a(ng-if="api.api == 'files'", href="", ng-click="delete_path(file)")
                     i.fa.fa-trash-o
-                  a(ng-if="api == 'files'", href="", ng-click="share_path(file)")
+                  a(ng-if="api.api == 'files'", href="", ng-click="share_path(file)")
                     i.fa.fa-share-alt
                     | [[shared[file]; ]]
                 td X kB
