--- a/views/login.html
+++ b/views/login.html
@@ -1,15 +1,1 @@
-
-<html>
-  <head>
-    <link rel="stylesheet" href="/bower_components/pure/pure.css"/>
-    <link rel="stylesheet" href="/bower_components/pure/grids-responsive.css"/>
-    <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css"/>
-  </head>
-  <body>
-    <form action="/login" method="post">
-      <input name="user"/>
-      <input type="password" name="password"/>
-      <input type="submit"/>
-    </form>
-  </body>
-</html>
+<html><head><link rel="stylesheet" href="/bower_components/pure/pure.css"/><link rel="stylesheet" href="/bower_components/pure/grids-responsive.css"/><link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css"/></head><body><form action="/login" method="post"><input name="user"/><input type="password" name="password"/><input type="submit"/></form></body></html>
