fix upload style

--- a/static/css/simpleshare.less
+++ b/static/css/simpleshare.less
@@ -3,12 +3,14 @@ ul {
 }
 .progress {
   width: 100%;
-  height: 1em;
+  height: 2em;
+  line-height: 2em;
 }
 .progress-wrap {
-  background: dark-green;
+  background: orange;
   margin: 20px 0;
-  overflow: hidden;
+  overflow: visible;
+  white-space: nowrap;
   position: relative;
   .progress-bar {
     background: #f80;
