a bit of style and show/hide shares links

--- a/static/css/simpleshare.less
+++ b/static/css/simpleshare.less
@@ -19,3 +19,25 @@ ul {
     top: 0;
   }
 }
+
+#files-list .pure-table.pure-table-striped tr:hover,
+#files-list .pure-table.pure-table-striped tr:hover td  {
+    background: orange;
+}
+
+a {
+    color: #09b;
+}
+
+div.shares-list {
+    display: none;
+    margin-top: -1em;
+    padding-top: 1.1em;
+}
+div.shares-list:hover {
+    display: block;
+}
+
+a:hover + div.shares-list {
+    display: block;
+}
