--- a/views/index.jade
+++ b/views/index.jade
@@ -47,6 +47,11 @@ html(ng-app="simpleShare")
                   ngf-multiple="true")
                   i.fa.fa-upload
                   | Upload
+            div#download-zip.pure-u-1.pure-u-md-1-3(ng-show="selected.length > 0")
+              div.pure-button.pure-button-primary(
+                  ng-click="download_zip()")
+                  i.fa.fa-download
+                  | Download as zip
           div.pure-g
               ul.pure-u-md-1-3(ng-show="upload_files.length >0")
                 li(ng-repeat="u_file in upload_files")
@@ -57,7 +62,7 @@ html(ng-app="simpleShare")
           table.pure-table.pure-table-striped.pure-table-horizontal
             thead
               tr
-                th(ng-click="select_all();", ng-class="['fa', 'fa-square-o']")
+                th(ng-click="select_all();", ng-class="{'fa': true, 'fa-square-o': !selected_all, 'fa-check-square-o': selected_all}")
                 th(ng-click="toggle_sort_by('name');") name
                 th(ng-click="toggle_sort_by('size');") size
                 th(ng-click="toggle_sort_by('date');") modified
