--- a/views/index.jade
+++ b/views/index.jade
@@ -34,25 +34,25 @@ html(ng-app="simpleShare")
     script(type='text/ng-template', id='files.html')
       div#content
         //- base(href="/files")
-        div#actions(ng-show="api.api != 'shared'")
+        div#actions
           div.pure-g
-            div#create-folders.pure-form.pure-u-1.pure-u-md-1-3
+            div#create-folders.pure-form.pure-u-1.pure-u-md-1-3(ng-show="api.api != 'shared'")
               input(ng-model='new_folder')
               button.pure-button.pure-button-primary(type='submit', ng-click="create_folder()")
                 | Create folder
-            div#upload-files.pure-u-1.pure-u-md-1-3
+            div#upload-files.pure-u-1.pure-u-md-1-3(ng-show="api.api != 'shared'")
               div.pure-button.pure-button-primary(
                   ngf-select,
                   ng-model="upload_files",
                   ngf-multiple="true")
                   i.fa.fa-upload
                   | Upload
-            div#download-zip.pure-u-1.pure-u-md-1-3(ng-show="selected.length > 0")
+            div#download-zip.pure-u-1.pure-u-md-1-3
               div.pure-button.pure-button-primary(
                   ng-click="download_zip()")
                   i.fa.fa-download
                   | Download as zip
-          div.pure-g
+          div.pure-g(ng-show="api.api != 'shared'")
               ul.pure-u-md-1-3(ng-show="upload_files.length >0")
                 li(ng-repeat="u_file in upload_files")
                   div.progress-wrap.progress(ng-style="{'width': u_file.up_progress + '%'}")
